--- a/direct/Odyssey.plist
+++ b/direct/Odyssey.plist
@@ -11,13 +11,13 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://coolstar.moe/mirror/Odyssey_beta3.ipa</string>
+					<string>odyssey.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://rashidfarhad.github.io/RashaStore/Icon.png</string>
+					<string>https://rashidfarhad.github.io/pangu/RashidFarhad1.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -31,12 +31,12 @@
 				<key>bundle-identifier</key>
 				<string>org.coolstar.odyssey</string>
 				<key>bundle-version</key>
-				<string>2.0</string>
+				<string>1.0 Beta3</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
 				<string>
-⚡Odyssey 2.0⚡
+⚡Odyssey 1.0 Beta3⚡
  
 RashidFarhad Store📦
 
