--- a/direct/Odyssey.plist
+++ b/direct/Odyssey.plist
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -11,13 +11,13 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>odyssey.ipa</string>
+					<string>https://raw.githubusercontent.com/RashidFarhad/yolu102/master/ipa/odyssey.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://rashidfarhad.github.io/pangu/RashidFarhad1.png</string>
+					<string>https://rashidfarhadstore.cf/Icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
