--- a/direct/Odyssey.plist
+++ b/direct/Odyssey.plist
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
@@ -17,7 +17,7 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://rashidfarhadstore.cf/Icon.png</string>
+					<string>https://raw.githubusercontent.com/RashidFarhad/yolu102/master/RashidFarhad1.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -37,6 +37,8 @@
 				<key>title</key>
 				<string>
 ⚡Odyssey 1.0 Beta3⚡
+
+🔥Jailbreak🔥
  
 RashidFarhad Store📦
 
