--- a/direct/odyssey.plist
+++ b/direct/odyssey.plist
@@ -11,13 +11,13 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/RashidFarhad/yolu102/master/ipa/odyssey.ipa</string>
+					<string>https://rashidfarhadstore.ml/icon/RashidFarhad1.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/RashidFarhad/yolu102/master/RashidFarhad1.png</string>
+					<string>https://rashidfarhadstore.ml/icon/RashidFarhad1.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
