--- a/direct/VideoStar.plist
+++ b/direct/VideoStar.plist
@@ -11,22 +11,34 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
+					<string>https://ipadzmoha.com/dzmohaipa/uploads/VideoStar++.ipa</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>display-image</string>
+					<key>url</key>
+					<string>https://rashidfarhadstore.ml/icon/RashidFarhad1.png</string>
+				</dict>
+				<dict>
+					<key>kind</key>
+					<string>full-size-image</string>
+					<key>url</key>
 					<string>https://rashidfarhadstore.ml/icon/RashidFarhad1.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.frontierdesign.videostar</string>
+				<string>ml.rashid.VideoStar</string>
 				<key>bundle-version</key>
-				<string>9.1.1</string>
+				<string>vBeta7</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
 				<string>
 ⚡VideoStar++⚡
 
-🔥App For Editor🔥
+🔥App Editor🔥
  
 RashidFarhad Store📦
 
