--- a/direct/gtasa.plist
+++ b/direct/gtasa.plist
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>gq.sizu.gtasanandreas</string>
+				<string>ml.rashid.gtasanandreas</string>
 				<key>bundle-version</key>
 				<string>2.2</string>
 				<key>kind</key>
