--- a/direct/CuteCutPro.plist
+++ b/direct/CuteCutPro.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://ipadzmoha.com/dzmohaipa/uploads/VideoStar++.ipa</string>
+					<string>https://ia801308.us.archive.org/31/items/ABUALI_CuteCUTPro.ipa/Cute%20CUT%20Pro.ipa.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -29,7 +29,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>ml.rashid.VideoStar</string>
+				<string>ml.rashid.Cut</string>
 				<key>bundle-version</key>
 				<string>vBeta7</string>
 				<key>kind</key>
@@ -38,7 +38,7 @@
 				<string>
 ⚡CuteCutPro⚡
 
-🔥App Cracker🔥
+🔥App Store🔥
  
 RashidFarhad Store📦
 
