--- a/direct/KineMaster.plist
+++ b/direct/KineMaster.plist
@@ -11,34 +11,34 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.cokernutx.com/ipa2/subwaysurfers.ipa</string>
+					<string>https://www.cokernutx.com/ipaad/kinemaster.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://rashidfarhad.github.io/RashaStore/Icon.png</string>
+					<string>https://rashidfarhadstore.ml/icon/RashidFarhad1.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://www.iphonecake.com/images/Icon-60.png</string>
+					<string>https://rashidfarhadstore.ml/icon/RashidFarhad1.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>pmt.qnzboi102.sws</string>
+				<string>ml.rashid.Kinemaster</string>
 				<key>bundle-version</key>
-				<string>1.118.0</string>
+				<string>vBeta7</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
 				<string>
-⚡Subway Surfers Hack⚡
+⚡KineMaster Pro⚡
 
-🔥 App Hacks 🔥
+🔥App Store🔥
  
 RashidFarhad Store📦
 
