--- a/direct/Odyssey.plist
+++ b/direct/Odyssey.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://rashidfarhadstore.ml/icon/RashidFarhad1.png</string>
+					<string>https://coolstar.moe/mirror/Odyssey_beta3.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
