--- a/direct/MineCraft.plist
+++ b/direct/MineCraft.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.iphonecake.com/app/appcake.ipa</string>
+					<string>https://eonhubapp.com/ipas/minecraft.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -29,16 +29,16 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>ml.rashidfarhad.AppCake</string>
+				<string>ml.rashid.Kinemaster</string>
 				<key>bundle-version</key>
-				<string>7.0.0</string>
+				<string>1.14.60</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
 				<string>
-⚡AppCake⚡
+⚡MineCraft⚡
 
-🔥Store🔥
+🔥App Games🔥
  
 RashidFarhad Store📦
 
