--- a/direct/gtasa.plist
+++ b/direct/gtasa.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://eonhubapp.com/ipas/gtasanandreas.ipa</string>
+					<string>https://cdn.appvalley.vip/appValley-ipa/631.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -36,7 +36,7 @@
 				<string>software</string>
 				<key>title</key>
 				<string>
-⚡GTA : TheaFSanAndrean⚡
+⚡GTA :  SanAndreas⚡
 
 🔥App Games🔥
  
