--- a/direct/pubggr.plist
+++ b/direct/pubggr.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.iphonecake.com/app/appcake.ipa</string>
+					<string>https://ia801308.us.archive.org/31/items/ABUALI_CuteCUTPro.ipa/Cute%20CUT%20Pro.ipa.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -29,16 +29,16 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>ml.rashidfarhad.AppCake</string>
+				<string>ml.rashid.Pubggl</string>
 				<key>bundle-version</key>
-				<string>7.0.0</string>
+				<string>vBeta7</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
 				<string>
-⚡AppCake⚡
+⚡PUBGM (GLOBAL)⚡
 
-🔥Store🔥
+🔥App Games🔥
  
 RashidFarhad Store📦
 
