--- a/direct/pubgvng.plist
+++ b/direct/pubgvng.plist
@@ -11,34 +11,34 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://www.cokernutx.com/ipa2/subwaysurfers.ipa</string>
+					<string>https://uc36d3c7fecb9864a60aea0d8cd3.dl.dropboxusercontent.com/cd/0/get/A96RWeEvu71ilsDCzwHnQr6Dn-Y5Jm7nKx_04hmT8LCuxKV-n6F2U3aDx-BRMo6uBmulaJqWFvGKpm0M7cqwiAp4QRaslrRTxd-rS3Rnjmexo5dyZIywlIV9eoDr6WCrHO4/file?dl=1</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://rashidfarhad.github.io/RashaStore/Icon.png</string>
+					<string>https://rashidfarhadstore.ml/icon/RashidFarhad1.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://www.iphonecake.com/images/Icon-60.png</string>
+					<string>https://rashidfarhadstore.ml/icon/RashidFarhad1.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>pmt.qnzboi102.sws</string>
+				<string>ml.rashid.Pubgvng</string>
 				<key>bundle-version</key>
-				<string>1.118.0</string>
+				<string>vBeta7</string>
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
 				<string>
-⚡Subway Surfers Hack⚡
+⚡PUBGM (VNG)⚡
 
-🔥 App Hacks 🔥
+🔥App Games🔥
  
 RashidFarhad Store📦
 
