--- a/direct/pubgvng.plist
+++ b/direct/pubgvng.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://uc36d3c7fecb9864a60aea0d8cd3.dl.dropboxusercontent.com/cd/0/get/A96RWeEvu71ilsDCzwHnQr6Dn-Y5Jm7nKx_04hmT8LCuxKV-n6F2U3aDx-BRMo6uBmulaJqWFvGKpm0M7cqwiAp4QRaslrRTxd-rS3Rnjmexo5dyZIywlIV9eoDr6WCrHO4/file?dl=1</string>
+					<string>https://up4net.com/uploads2/up4net-PUBG-VN.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
