--- a/direct/gtasa.plist
+++ b/direct/gtasa.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://cdn.appvalley.vip/appValley-ipa/631.ipa</string>
+					<string>https://tools4cydia-ipa.host/ipas/9420329405f3b09c8eb1c2.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
