--- a/direct/pubggl.plist
+++ b/direct/pubggl.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://ia801308.us.archive.org/31/items/ABUALI_CuteCUTPro.ipa/Cute%20CUT%20Pro.ipa.ipa</string>
+					<string>https://ipa.fileup.me/Global_0190_v3.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
